2009-02-21  higepon  <higepon@users.sourceforge.jp>

        * test/input-port.scm : FileBinaryInputPort (None-buffering)  passes tests.

        * BufferedFileBinaryInputPort.cpp : Added.

        * test/input-port.scm : Added tests for file-binary-input-port on positions and buffering.

2009-02-20  higepon  <higepon@users.sourceforge.jp>

        * Passes all of string-output-port tests.

        * test/output-port.scm: Adde tests for string-output-port. Now it fails, so commented them out.

        * test/input-port.scm : Added tests for textual-input-port (position things).

        * test/output-port.scm : Added tests for textual-output-port (position things).

        * configure.ac (CFLAGS): O2 => O3.

        * PortProcedures.cpp (transcodedPortEx): Accept binary output also.

        * ProcessProcedures.cpp : Issue 45 in mosh-scheme: spawned process is still alive even when a command is not found by leque.
        When in calling spawn, exevp fails, we should terminated the forked process.

2009-02-20  kokosabu  <kokosabu@gmail.com>

        * Added: make-custom-textual-input-port, make-custom-textual-output-port, put-u8,
                 flush-output-port.

2009-02-20  higepon  <higepon@users.sourceforge.jp>

        * Now profiler is broken. It will be fixed soon.

        * Gloc.h: Added for Global location object. It makes top-level variable lookup much faster.
                  Thanks to shiro kawai for advising me.

2009-02-19  kokosabu  <kokosabu@gmail.com>

        * CustomBinaryOutputPort.cpp : Added.

2009-02-19  higepon  <higepon@users.sourceforge.jp>

        * Now string-input-port supports port-position.

        * StandardOutputPort.h : Added. stdout/stderr doesn't support port-position.

        * StandardInputPort.h : Added. stdin doesn't support port-position.

        * test/input-port.scm : Passes all of the custom binary input port. Yey!.

        * CustomBinaryInputPort.cpp : Added get-bytevector-n for custom-binary-input-port.
