@@ -227,16 +227,16 @@
   (test/t (port-has-port-position? p))
   (test/t (port-has-set-port-position!? p))
   (test* (port-position p) 0)
-  ;(put-string p "ab")
+  (put-string p "ab")
   (test* (port-position p) 2)
-  ;(put-string p "c")
+  (put-string p "c")
   (flush-output-port p)
   (test* accum '(#\c #\b #\a))
   (test* (port-position p) 3)
-  ;(set-port-position! p 2)
+  (set-port-position! p 2)
   (test* (port-position p) 2)
   (test* accum '(#\b #\a))
-  ;(put-string p "xyzw" 2 1)
+  (put-string p "xyzw" 2 1)
   (flush-output-port p)
   (test* accum '(#\z #\b #\a))
   (close-port p))
@@ -262,7 +262,8 @@
   (display #\a port)
   (test* (port-position port) 1)
   (set-port-position! port 2)
-  (display "cd" port)
+  ;(display "cd" port)
+  (put-string port "cd")
   (test* (port-position port) 4)
   (set-port-position! port 1)
   (display #\b port)
