@@ -1,3 +1,9 @@
+2009-02-21  kokosabu  <kokosabu@gmail.com>
+
+        * Added: put-string.
+
+        * Fixed: put-bytevector.
+
 2009-02-21  higepon  <higepon@users.sourceforge.jp>
 
         * test/input-port.scm : FileBinaryInputPort (None-buffering)  passes tests.
